compiler/plc_driver/src/tests/snapshots/plc_driver__tests__external_files__external_file_function_call.snap
---
source: compiler/plc_driver/./src/tests/external_files.rs
expression: "results.join(\"\\n\")"
---
; ModuleID = 'main.st'
source_filename = "main.st"

define i16 @main() {
entry:
  %main = alloca i16, align 2
  store i16 0, i16* %main, align 2
  %call = call i16 @external()
  %main_ret = load i16, i16* %main, align 2
  ret i16 %main_ret
}

declare i16 @external()

; ModuleID = 'external.st'
source_filename = "external.st"

declare i16 @main()

declare i16 @external()

